--- a/website/styles/index.css
+++ b/website/styles/index.css
@@ -1,6 +1,9 @@
 #upload{
-   	margin-top:20%;
-    width:500px;
+    margin-left:10px;
+    margin-right:10px;
+    margin-bottom:10px;
+    max-width:100%;
+    position:relative;
 }
 
 #masthead{
@@ -25,8 +28,20 @@
     margin-left:150px;
     height:100%;
     padding-top:10px;
+   	cursor:pointer;
 }
 
+#type_checker{
+	margin:5px;
+	
+}
+
+#queue{
+	width: 400px;
+	overflow:auto;
+	margin:10px;
+	margin-bottom:30px;
+}
 #button_group{
     width:800px;
     margin-left:auto;
@@ -93,11 +108,13 @@ body{
 #welcome{
     margin-left: 10px;
     margin-top: 20px;
+    margin-right:10px;
+    margin-bottom:20px;
+    max-width:100%;
 }
 
 #content{
     width: 800px;
-    height: 600px;
     border-color:#313131;
     border-style:solid;
     border-width: 6px;
@@ -118,6 +135,10 @@ body{
 	width:50px;
 	height:20px;
 	float:left;
+}
+
+h3{
+    font-weight:normal;
 }
 
 #samples{
